--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ body {
     padding-top: 15px;
     height: 800px;
     background-color: darkred;
+    border-radius: 25px;
     margin-top: 20px;
 }
 #questionCard {
@@ -45,7 +46,3 @@ body {
     text-align: center;
     margin-top: 5px;
 }
-/* p{
-    margin-top: 30px;
-    font-size: 25px;
-} */
